--- a/resources/css/svg.css
+++ b/resources/css/svg.css
@@ -10,48 +10,39 @@
     font-weight: bold;
 }
 
-#webtrees-pedigree-chart-container .person rect {
-    /*stroke: rgb(175, 175, 175);*/
-    /*stroke-dasharray: 5;*/
-    /*stroke-width: 3px;*/
-}
-
-#webtrees-pedigree-chart-container .person rect.female {
+#webtrees-pedigree-chart-container svg rect.female {
     stroke: rgb(255, 32, 128);
     stroke-dasharray: none;
     stroke-width: 3px;
 }
 
-#webtrees-pedigree-chart-container .person rect.male {
+#webtrees-pedigree-chart-container svg rect.male {
     stroke: rgb(129, 169, 203);
     stroke-dasharray: none;
     stroke-width: 3px;
 }
 
-#webtrees-pedigree-chart-container .person rect.unknown {
+#webtrees-pedigree-chart-container svg rect.unknown {
     stroke: rgb(175, 175, 175);
     stroke-dasharray: 5;
     stroke-width: 3px;
 }
 
-#webtrees-pedigree-chart-container .person {
-}
-
-#webtrees-pedigree-chart-container .person rect.image {
+#webtrees-pedigree-chart-container svg rect.image {
     stroke: rgb(175, 175, 175);
 }
 
-#webtrees-pedigree-chart-container .link {
+#webtrees-pedigree-chart-container svg path.link {
     fill: none;
     stroke: rgb(175, 175, 175);
     stroke-width: 1.5px;
 }
 
-#webtrees-pedigree-chart-container svg .name .preferred {
+#webtrees-pedigree-chart-container svg g.name tspan.preferred {
     text-decoration: underline;
 }
 
-#webtrees-pedigree-chart-container svg .date {
+#webtrees-pedigree-chart-container svg text.date {
     fill: rgb(127, 127, 127);
     font-weight: normal;
     direction: ltr;
