Changed action of toggle more options button. Updated en-US and provided new en-GB translations. Updated collapse css to allow transition to work

--- a/resources/css/pedigree-chart.css
+++ b/resources/css/pedigree-chart.css
@@ -1,6 +1,8 @@
 /* Form */
-#webtrees-pedigree-chart-form #showMoreOptions.collapsing {
-    transition: none;
+
+#webtrees-pedigree-chart-form .row {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 /* SVG */
