--- a/resources/css/svg.css
+++ b/resources/css/svg.css
@@ -2,8 +2,13 @@
 #webtrees-pedigree-chart-container svg {
     /* Native font stack: see https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
     min-height: 600px;
+}
+
+/* Required for the exported SVG to display properly in Inkscape */
+#webtrees-pedigree-chart-container svg.rtl {
+    direction: rtl !important;
+    unicode-bidi: bidi-override !important;
 }
 
 #webtrees-pedigree-chart-container svg text {
@@ -38,6 +43,10 @@
     stroke-width: 1.5px;
 }
 
+#webtrees-pedigree-chart-container svg g.name text {
+    font-weight: bold;
+}
+
 #webtrees-pedigree-chart-container svg g.name tspan.preferred {
     text-decoration: underline;
 }
@@ -45,7 +54,5 @@
 #webtrees-pedigree-chart-container svg text.date {
     fill: rgb(127, 127, 127);
     font-weight: normal;
-    direction: ltr;
-    unicode-bidi: plaintext;
     font-size: 13px;
 }
