Fix - Allow to have multiple blocks on the same page

--- a/resources/views/modules/charts/chart.phtml
+++ b/resources/views/modules/charts/chart.phtml
@@ -16,7 +16,7 @@ declare(strict_types=1);
 ?>
 
 <style>
-#webtrees-pedigree-chart-container svg {
+.webtrees-pedigree-chart-container svg {
     min-height: unset !important;
 }
 </style>
