--- a/resources/css/svg.css
+++ b/resources/css/svg.css
@@ -1,61 +1,61 @@
 /* SVG export styles */
-#webtrees-pedigree-chart-container svg {
+.webtrees-pedigree-chart-container svg {
     /* Native font stack: see https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     min-height: 600px;
 }
 
 /* Required for the exported SVG to display properly in Inkscape */
-#webtrees-pedigree-chart-container svg.rtl {
+.webtrees-pedigree-chart-container svg.rtl {
     direction: rtl !important;
     unicode-bidi: bidi-override !important;
 }
 
-#webtrees-pedigree-chart-container svg text {
+.webtrees-pedigree-chart-container svg text {
     font-weight: bold;
 }
 
-#webtrees-pedigree-chart-container svg rect.female {
+.webtrees-pedigree-chart-container svg rect.female {
     stroke: var(--sex-f-fg, rgb(255, 32, 128));
     stroke-dasharray: none;
     stroke-width: 3px;
     fill: var(--sex-f-bg, rgb(233, 218, 241));
 }
 
-#webtrees-pedigree-chart-container svg rect.male {
+.webtrees-pedigree-chart-container svg rect.male {
     stroke: var(--sex-m-fg, rgb(129, 169, 203));
     stroke-dasharray: none;
     stroke-width: 3px;
     fill: var(--sex-m-bg, rgb(237, 247, 253));
 }
 
-#webtrees-pedigree-chart-container svg rect.unknown {
+.webtrees-pedigree-chart-container svg rect.unknown {
     stroke: var(--sex-u-fg, rgb(129, 169, 203));
     stroke-dasharray: 5;
     stroke-width: 3px;
     fill: var(--sex-u-bg, rgb(255, 255, 255));
 }
 
-#webtrees-pedigree-chart-container svg rect.image {
+.webtrees-pedigree-chart-container svg rect.image {
     stroke: rgb(175, 175, 175);
 }
 
-#webtrees-pedigree-chart-container svg path.link {
+.webtrees-pedigree-chart-container svg path.link {
     fill: none;
     stroke: rgb(175, 175, 175);
     stroke-width: 1.5px;
     /*shape-rendering: crispEdges;*/
 }
 
-#webtrees-pedigree-chart-container svg g.name text {
+.webtrees-pedigree-chart-container svg g.name text {
     font-weight: bold;
 }
 
-#webtrees-pedigree-chart-container svg g.name tspan.preferred {
+.webtrees-pedigree-chart-container svg g.name tspan.preferred {
     text-decoration: underline;
 }
 
-#webtrees-pedigree-chart-container svg text.date {
+.webtrees-pedigree-chart-container svg text.date {
     fill: rgb(127, 127, 127);
     font-weight: normal;
     font-size: 13px;
