--- a/resources/views/modules/pedigree-chart/page.phtml
+++ b/resources/views/modules/pedigree-chart/page.phtml
@@ -52,42 +52,9 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
             </div>
         </div>
 
-        <div class="form-group row">
-            <label class="col-sm-3 col-form-label wt-page-options-label" for="generations">
-                <?= I18N::translate('Generations') ?>
-            </label>
-            <div class="col-sm-9 wt-page-options-value">
-                <?=
-                    view('components/select', [
-                        'id'       => 'generations',
-                        'name'     => 'generations',
-                        'selected' => $configuration->getGenerations(),
-                        'options'  => $configuration->getGenerationsList(),
-                        'class'    => 'form-control-sm',
-                    ])
-                ?>
-            </div>
-        </div>
+        <?= view($moduleName.'::modules/pedigree-chart/form/generations', ['configuration' => $configuration]) ?>
 
-        <div class="form-group row">
-            <label class="col-form-label col-sm-3 wt-page-options-label">
-                <?= I18N::translate('Orientation') ?>
-            </label>
-            <div class="col-sm-9 wt-page-options-value" id="layout">
-                <?=
-                    view('components/radios-inline', [
-                        'name' => 'layout',
-                        'options' => [
-                            Configuration::LAYOUT_RIGHTLEFT => view('icons/pedigree-left') . I18N::translate('left'),
-                            Configuration::LAYOUT_LEFTRIGHT => view('icons/pedigree-right') . I18N::translate('right'),
-                            Configuration::LAYOUT_BOTTOMTOP => view('icons/pedigree-up') . I18N::translate('up'),
-                            Configuration::LAYOUT_TOPBOTTOM => view('icons/pedigree-down') . I18N::translate('down'),
-                        ],
-                        'selected' => $configuration->getLayout(),
-                    ])
-                ?>
-            </div>
-        </div>
+        <?= view($moduleName.'::modules/pedigree-chart/form/orientation', ['configuration' => $configuration]) ?>
 
         <div class="collapse" id="showMoreOptions">
             <div class="form-group row">
