Rework chart instance creation

--- a/resources/css/svg.css
+++ b/resources/css/svg.css
@@ -53,14 +53,14 @@
     font-size: 13px;
 }
 
-#webtrees-pedigree-chart-container svg .wt-chart-box-name {
+.webtrees-pedigree-chart-container svg .wt-chart-box-name {
     fill: var(--link-color, currentColor);
 }
 
-#webtrees-pedigree-chart-container svg .wt-chart-box-name-alt {
+.webtrees-pedigree-chart-container svg .wt-chart-box-name-alt {
     fill: currentColor;
 }
 
-#webtrees-pedigree-chart-container svg .wt-chart-box-name:hover:not(.wt-chart-box-name-alt) {
+.webtrees-pedigree-chart-container svg .wt-chart-box-name:hover:not(.wt-chart-box-name-alt) {
     fill: var(--link-color-hover);
 }
