--- a/resources/views/modules/pedigree-chart/chart.phtml
+++ b/resources/views/modules/pedigree-chart/chart.phtml
@@ -16,12 +16,12 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
 /**
  * @var string        $javascript
  * @var Configuration $configuration
+ * @var array         $id            The unique chart ID
  * @var array         $chartParams
  * @var string        $svgStylesheet
  * @var array         $data          The chart data
  */
 
-$id = uniqid();
 ?>
 
 <div class="webtrees-pedigree-chart-container" id="webtrees-pedigree-chart-container-<?= $id ?>"></div>
@@ -37,43 +37,46 @@ $id = uniqid();
 <?php View::push('javascript'); ?>
 <script>
 
-const chartParams<?= $id ?> = <?= $chartParams ?>;
-const cssFiles    = [];
-
-<?php foreach (app(ModuleThemeInterface::class)->stylesheets() as $stylesheet) : ?>
-    cssFiles.push(<?= json_encode($stylesheet) ?>);
-<?php endforeach ?>
-
-cssFiles.push(<?= json_encode($svgStylesheet) ?>);
-
-const optionGenerations<?= $id ?> = typeof generations !== "undefined"
-    ? generations
-    : <?= $configuration->getGenerations() ?>;
-
-const optionShowEmptyBox<?= $id ?> = typeof showEmptyBoxes !== "undefined"
-    ? showEmptyBoxes
-    : <?= json_encode($configuration->getShowEmptyBoxes()) ?>;
-
-const optionLayout<?= $id ?> = typeof treeLayout !== "undefined"
-    ? treeLayout
-    : <?= json_encode($configuration->getLayout()) ?>;
-
-// Create chart instance with stored configuration
-const pedigreeChart<?= $id ?> = new WebtreesPedigreeChart.PedigreeChart(
+// Create chart instance
+new WebtreesPedigreeChart.PedigreeChart(
     "#webtrees-pedigree-chart-container-<?= $id ?>",
     {
-        labels         : chartParams<?= $id ?>.labels,
-        generations    : optionGenerations<?= $id ?>,
-        showEmptyBoxes : optionShowEmptyBox<?= $id ?>,
-        treeLayout     : optionLayout<?= $id ?>,
-        rtl            : chartParams<?= $id ?>.rtl
+        labels : <?= json_encode($chartParams['labels']) ?>,
+        rtl    : <?= json_encode($chartParams['rtl']) ?>,
+
+        get generations() {
+            return typeof generations !== "undefined"
+                ? generations
+                : <?= $configuration->getGenerations() ?>
+        },
+
+        get showEmptyBoxes() {
+            return typeof showEmptyBoxes !== "undefined"
+                ? showEmptyBoxes
+                : <?= json_encode($configuration->getShowEmptyBoxes()) ?>;
+        },
+
+        get treeLayout() {
+            return typeof treeLayout !== "undefined"
+                ? treeLayout
+                : <?= json_encode($configuration->getLayout()) ?>;
+        },
+
+        get cssFiles() {
+            let cssFiles = [];
+
+            <?php foreach (app(ModuleThemeInterface::class)->stylesheets() as $stylesheet) : ?>
+                cssFiles.push(<?= json_encode($stylesheet) ?>);
+            <?php endforeach ?>
+
+            cssFiles.push(<?= json_encode($svgStylesheet) ?>);
+
+            return cssFiles;
+        },
+
+        data: <?= json_encode($data) ?>
     }
 );
-
-pedigreeChart<?= $id ?>.cssFiles = cssFiles;
-
-// Draw chart
-pedigreeChart<?= $id ?>.draw(<?= json_encode($data) ?>);
 
 </script>
 <?php View::endpush(); ?>
