--- a/resources/views/modules/pedigree-chart/page.phtml
+++ b/resources/views/modules/pedigree-chart/page.phtml
@@ -29,7 +29,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
  */
 ?>
 
-<div id="page-pedigree">
+<div class="webtrees-pedigree-chart">
     <h2 class="wt-page-title"><?= $title ?></h2>
 
     <form id="webtrees-pedigree-chart-form" method="post" class="wt-page-options wt-page-options-pedigree-chart d-print-none">
