Rework stylesheet assignment to chart

--- a/resources/views/modules/pedigree-chart/chart.phtml
+++ b/resources/views/modules/pedigree-chart/chart.phtml
@@ -9,26 +9,20 @@
 
 declare(strict_types=1);
 
-use Fisharebest\Webtrees\Module\ModuleThemeInterface;
 use Fisharebest\Webtrees\View;
 use MagicSunday\Webtrees\PedigreeChart\Configuration;
 
 /**
  * @var string        $javascript
  * @var Configuration $configuration
- * @var array         $id            The unique chart ID
+ * @var array         $id                The unique chart ID
  * @var array         $chartParams
- * @var string        $svgStylesheet
- * @var array         $data          The chart data
+ * @var string[]      $exportStylesheets A list of stylesheets used by SVG export
+ * @var array         $data              The chart data
  */
-
 ?>
 
 <div class="webtrees-pedigree-chart-container" id="webtrees-pedigree-chart-container-<?= $id ?>"></div>
-
-<?php View::push('styles') ?>
-<link rel="stylesheet" href="<?= e($svgStylesheet) ?>">
-<?php View::endpush(); ?>
 
 <?php View::push('javascript'); ?>
 <script src="<?= e($javascript) ?>"></script>
@@ -41,8 +35,9 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
 new WebtreesPedigreeChart.PedigreeChart(
     "#webtrees-pedigree-chart-container-<?= $id ?>",
     {
-        labels : <?= json_encode($chartParams['labels']) ?>,
-        rtl    : <?= json_encode($chartParams['rtl']) ?>,
+        labels: <?= json_encode($chartParams['labels']) ?>,
+        rtl: <?= json_encode($chartParams['rtl']) ?>,
+        cssFiles: <?= json_encode($exportStylesheets) ?>,
 
         get generations() {
             return typeof generations !== "undefined"
@@ -60,18 +55,6 @@ new WebtreesPedigreeChart.PedigreeChart(
             return typeof treeLayout !== "undefined"
                 ? treeLayout
                 : <?= json_encode($configuration->getLayout()) ?>;
-        },
-
-        get cssFiles() {
-            let cssFiles = [];
-
-            <?php foreach (app(ModuleThemeInterface::class)->stylesheets() as $stylesheet) : ?>
-                cssFiles.push(<?= json_encode($stylesheet) ?>);
-            <?php endforeach ?>
-
-            cssFiles.push(<?= json_encode($svgStylesheet) ?>);
-
-            return cssFiles;
         },
 
         data: <?= json_encode($data) ?>
