--- a/resources/views/modules/pedigree-chart/page.phtml
+++ b/resources/views/modules/pedigree-chart/page.phtml
@@ -23,8 +23,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
  * @var Tree          $tree
  * @var array         $chartParams
  * @var string        $javascript
- * @var string        $stylesheet
- * @var string        $svgStylesheet
+ * @var string[]      $stylesheets
  * @var string        $ajaxUrl
  */
 ?>
@@ -151,8 +150,9 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
 </div>
 
 <?php View::push('styles') ?>
-<link rel="stylesheet" href="<?= e($stylesheet) ?>">
-<link rel="stylesheet" href="<?= e($svgStylesheet) ?>">
+    <?php foreach ($stylesheets as $stylesheet) : ?>
+        <link rel="stylesheet" href="<?= e($stylesheet) ?>">
+    <?php endforeach ?>
 <?php View::endpush(); ?>
 
 <?php View::push('javascript'); ?>
