--- a/resources/css/pedigree-chart.css
+++ b/resources/css/pedigree-chart.css
@@ -1,4 +1,11 @@
 /* Form */
+.form-element-with-description {
+    padding-left: 1.5em;
+}
+
+.form-element-with-description .form-check {
+    padding-left: 0;
+}
 
 /* SVG */
 .webtrees-pedigree-chart-container {
