--- a/resources/views/modules/pedigree-chart/config.phtml
+++ b/resources/views/modules/pedigree-chart/config.phtml
@@ -1,5 +1,12 @@
 <?php
 
+/**
+ * This file is part of the package magicsunday/webtrees-pedigree-chart.
+ *
+ * For the full copyright and license information, please read the
+ * LICENSE file distributed with this source code.
+ */
+
 declare(strict_types=1);
 
 use Fisharebest\Webtrees\Http\RequestHandlers\ControlPanel;
@@ -9,29 +16,37 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
 
 /**
  * @var Configuration $configuration
- * @var string $moduleName
- * @var string $title
+ * @var string        $moduleName
+ * @var string        $title
+ * @var string        $description
  */
-
 ?>
 
 <?= view('components/breadcrumbs', ['links' => [route(ControlPanel::class) => I18N::translate('Control panel'), route(ModulesAllPage::class) => I18N::translate('Modules'), $title]]) ?>
 
 <h1><?= $title ?></h1>
+<p><?= $description ?></p>
 
 <form method="post">
-    <?= view($moduleName.'::modules/pedigree-chart/form/generations', ['configuration' => $configuration]) ?>
+    <div class="mb-3">
+        <?= view($moduleName.'::modules/pedigree-chart/form/generations', ['configuration' => $configuration]) ?>
+    </div>
+    <div class="mb-3">
+        <?= view($moduleName.'::modules/pedigree-chart/form/orientation', ['configuration' => $configuration]) ?>
+    </div>
 
-    <?= view($moduleName.'::modules/pedigree-chart/form/orientation', ['configuration' => $configuration]) ?>
+    <div class="row mb-3">
+        <div class="offset-sm-3 col-sm-9">
+            <button type="submit" class="btn btn-primary">
+                <?= I18N::translate('save') ?>
+            </button>
 
-    <button type="submit" class="btn btn-primary">
-        <?= I18N::translate('save') ?>
-    </button>
-
-    <a href="<?= route(ControlPanel::class) ?>" class="btn btn-secondary">
-        <?= view('icons/cancel') ?>
-        <?= I18N::translate('cancel') ?>
-    </a>
+            <a href="<?= route(ControlPanel::class) ?>" class="btn btn-secondary">
+                <?= view('icons/cancel') ?>
+                <?= I18N::translate('cancel') ?>
+            </a>
+        </div>
+    </div>
 
     <?= csrf_field() ?>
 </form>
