--- a/resources/views/modules/pedigree-chart/form/generations.phtml
+++ b/resources/views/modules/pedigree-chart/form/generations.phtml
@@ -1,5 +1,12 @@
 <?php
 
+/**
+ * This file is part of the package magicsunday/webtrees-pedigree-chart.
+ *
+ * For the full copyright and license information, please read the
+ * LICENSE file distributed with this source code.
+ */
+
 declare(strict_types=1);
 
 use Fisharebest\Webtrees\I18N;
@@ -8,7 +15,6 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
 /**
  * @var Configuration $configuration
  */
-
 ?>
 
 <div class="form-group row">
