--- a/resources/css/pedigree-chart.css
+++ b/resources/css/pedigree-chart.css
@@ -7,6 +7,11 @@
     padding-left: 0;
 }
 
+#webtrees-pedigree-chart-form .row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 /* SVG */
 .webtrees-pedigree-chart-container {
     position: relative;
