--- a/resources/views/modules/pedigree-chart/page.phtml
+++ b/resources/views/modules/pedigree-chart/page.phtml
@@ -72,7 +72,7 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
             </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row mt-2">
             <div class="col-sm-12 wt-page-options-value text-center">
                 <div class="btn-toolbar justify-content-between">
                     <div class="btn-group btn-group-sm">
