--- a/resources/views/modules/pedigree-chart/form/orientation.phtml
+++ b/resources/views/modules/pedigree-chart/form/orientation.phtml
@@ -24,13 +24,8 @@ use MagicSunday\Webtrees\PedigreeChart\Configuration;
     <div class="col-sm-9 wt-page-options-value" id="layout">
         <?=
         view('components/radios-inline', [
-            'name' => 'layout',
-            'options' => [
-                Configuration::LAYOUT_RIGHTLEFT => view('icons/pedigree-left') . I18N::translate('left'),
-                Configuration::LAYOUT_LEFTRIGHT => view('icons/pedigree-right') . I18N::translate('right'),
-                Configuration::LAYOUT_BOTTOMTOP => view('icons/pedigree-up') . I18N::translate('up'),
-                Configuration::LAYOUT_TOPBOTTOM => view('icons/pedigree-down') . I18N::translate('down'),
-            ],
+            'name'     => 'layout',
+            'options'  => $configuration->getLayouts(),
             'selected' => $configuration->getLayout(),
         ])
         ?>
